ISSUE-2603 Expose Dav server response as sabreResponse MDC field on CalDav/CardDav errors
DavClientException now carries the Dav server response body (truncated to
its first 1024 bytes) and exposes it as the 'sabreResponse' MDC field when
CalDavCollect and CardDavAddContactProcessor log Dav failures, easing the
diagnostic of rejected events / contacts. CardDavClient now reads the
response body on unexpected statuses too.